--- a/src/composer.json
+++ b/src/composer.json
@@ -3,6 +3,7 @@
         "slim/slim": "^3.8",
         "slim/php-view": "^2.2",
         "illuminate/database": "~5.1",
-        "phpmailer/phpmailer": "^6.0"
+        "phpmailer/phpmailer": "^6.0",
+        "tuupola/slim-basic-auth": "^2.2"
     }
 }
